--- a/formula.yaml
+++ b/formula.yaml
@@ -26,7 +26,7 @@ brew:
     - { name: xz }
     - { name: vim }
     - { name: wget }
-    - { name: zsh, args: --disable-etcdir }
+    - { name: zsh, args: [--disable-etcdir] }
     - { name: nkf }
     - { name: libyaml }
     - { name: ruby-build }
